# morse

./: .gitignore  COPYING  README.md  TODO  autogen.sh  configure.ac
demos/: beep.c  makefile
src/: Makefile.am  beep-ao.c  beep-pa.c  beep-private.h  beep.c  beep.h  gencodes.py  keyer.c  keyer.h  main.c  morse.c  morse.c.in  morse.h  morse.json
